<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/opensans_bold"
            android:textColor="@color/primary"
            android:text="@string/app_name"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/questionText1"
            style="@style/questionsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_one_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <RadioGroup
            android:id="@+id/questionRadioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionText1">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/questionOneRButtonFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_one_radio_buttom_first" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/questionOneRButtonSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_one_radio_buttom_second" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/questionOneRButtonThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_one_radio_buttom_third" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/questionText2"
            style="@style/questionsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_two_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionRadioGroup1" />

        <RadioGroup
            android:id="@+id/questionRadioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionText2">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/questionTwoRButtonFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_two_radio_buttom_first" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/questionTwoRButtonSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_two_radio_buttom_second" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/questionTwoRButtonThird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_two_radio_buttom_third" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/questionText3"
            style="@style/questionsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/question_three_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionRadioGroup2" />

        <RadioGroup
            android:id="@+id/questionRadioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionText3">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/questionThreeRButtonFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_three_radio_buttom_first" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/questionThreeRButtonSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_three_radio_buttom_second" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/questionThreeRButtonThird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_three_radio_buttom_third" />
        </RadioGroup>

        <Button
            android:id="@+id/backButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sendButton"
            app:layout_constraintStart_toStartOf="@+id/questionRadioGroup3"
            app:layout_constraintTop_toBottomOf="@+id/questionRadioGroup3" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/send_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/layout"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toBottomOf="@+id/questionRadioGroup3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>